fix: simulate contextmenu on mobile device

--- a/src/themes/system/antos.css
+++ b/src/themes/system/antos.css
@@ -49,6 +49,7 @@ body
     margin: 0;
     right: 0;
     user-select:none;
+    -webkit-user-select:none;
     cursor: default;
     padding:0px;
     overflow: hidden;
